--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "heroku-postbuild": "npm run build",
     "lint": "eslint . && cd client && npm run lint",
     "lint:fix": "eslint --fix . && cd client && npm run lint:fix",
-    "test": "npm run lint && cd client && npm run test"
+    "test": "cd client && npm run test"
   },
   "author": "Travis Thompson, John Desrosiers",
   "license": "ISC",
